# orion

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  INSTALL.md  PERFORMANCE.md  PUBLISHING.md  ROADMAP.md  SECURITY_MODEL.md  USER_GUIDE.md
packaging/linux/: dev.orion.Orion.desktop  dev.orion.Orion.metainfo.xml
packaging/macos/: Info.plist
packaging/windows/: orion.iss
scripts/: build-lite.sh  build-release.sh  install.ps1  install.sh  package.ps1
src/: app.rs  command.rs  document.rs  git.rs  icon.rs  main.rs  security.rs  settings.rs  syntax.rs  workspace.rs
