[package]
name = "orion"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
authors = ["Orion contributors"]
license = "MIT"
description = "A fast, lightweight, secure native IDE for low-level languages."
readme = "README.md"
repository = "https://github.com/Chintanpatel24/orion"
homepage = "https://github.com/Chintanpatel24/orion"
keywords = ["ide", "editor", "c", "cpp", "rust"]
categories = ["development-tools", "text-editors"]

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
rfd = { version = "0.15", optional = true }

[features]
default = ["native-dialogs"]
native-dialogs = ["dep:rfd"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
